; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/9p/extr_cache.c_v9fs_cache_inode_put_cookie.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/9p/extr_cache.c_v9fs_cache_inode_put_cookie.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.v9fs_cookie = type { i32* }

@P9_DEBUG_FSC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"inode %p put cookie %p\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @v9fs_cache_inode_put_cookie(%struct.inode* %0) #0 {
  %2 = alloca %struct.inode*, align 8
  %3 = alloca %struct.v9fs_cookie*, align 8
  store %struct.inode* %0, %struct.inode** %2, align 8
  %4 = load %struct.inode*, %struct.inode** %2, align 8
  %5 = call %struct.v9fs_cookie* @v9fs_inode2cookie(%struct.inode* %4)
  store %struct.v9fs_cookie* %5, %struct.v9fs_cookie** %3, align 8
  %6 = load %struct.v9fs_cookie*, %struct.v9fs_cookie** %3, align 8
  %7 = getelementptr inbounds %struct.v9fs_cookie, %struct.v9fs_cookie* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %1
  br label %24

11:                                               ; preds = %1
  %12 = load i32, i32* @P9_DEBUG_FSC, align 4
  %13 = load %struct.inode*, %struct.inode** %2, align 8
  %14 = load %struct.v9fs_cookie*, %struct.v9fs_cookie** %3, align 8
  %15 = getelementptr inbounds %struct.v9fs_cookie, %struct.v9fs_cookie* %14, i32 0, i32 0
  %16 = load i32*, i32** %15, align 8
  %17 = call i32 @P9_DPRINTK(i32 %12, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), %struct.inode* %13, i32* %16)
  %18 = load %struct.v9fs_cookie*, %struct.v9fs_cookie** %3, align 8
  %19 = getelementptr inbounds %struct.v9fs_cookie, %struct.v9fs_cookie* %18, i32 0, i32 0
  %20 = load i32*, i32** %19, align 8
  %21 = call i32 @fscache_relinquish_cookie(i32* %20, i32 0)
  %22 = load %struct.v9fs_cookie*, %struct.v9fs_cookie** %3, align 8
  %23 = getelementptr inbounds %struct.v9fs_cookie, %struct.v9fs_cookie* %22, i32 0, i32 0
  store i32* null, i32** %23, align 8
  br label %24

24:                                               ; preds = %11, %10
  ret void
}

declare dso_local %struct.v9fs_cookie* @v9fs_inode2cookie(%struct.inode*) #1

declare dso_local i32 @P9_DPRINTK(i32, i8*, %struct.inode*, i32*) #1

declare dso_local i32 @fscache_relinquish_cookie(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
